<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransactionFragment">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/transaciton_frag_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/transaciton_frag_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_fragment_value"
                android:inputType="numberDecimal|textImeMultiLine" />

            <Spinner
                android:id="@+id/transaction_frag_kind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/transaction_fragment_category" />

            <Spinner
                android:id="@+id/transaction_frag_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/transaction_fragment_category" />

            <EditText
                android:id="@+id/transaciton_frag_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/transaction_fragment_description"
                android:inputType="textCapWords|textCapSentences|textImeMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/transaciton_frag_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:focusable="false"
                    android:hint="@string/transaction_fragment_date"
                    android:inputType="textImeMultiLine"
                    android:windowSoftInputMode="stateHidden|adjustResize" />

                <EditText
                    android:id="@+id/transaciton_frag_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:focusable="false"
                    android:hint="@string/transaction_fragment_time"
                    android:inputType="textImeMultiLine"
                    android:windowSoftInputMode="stateHidden|adjustResize" />
            </LinearLayout>

            <Spinner
                android:id="@+id/transaction_frag_option_cash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/transaction_fragment_option_cash" />

            <ListView
                android:id="@+id/transaction_fragment_option_cash_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="#a1a0a0"
                android:dividerHeight="2px" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>